refactor(authentication): 移除 UserDOMapper 中的冗余注解
- 删除了 UserDOMapper 类中不再使用的 TableName 注解- 优化了 UserDOMapper 类的代码结构